Add Docker docs & watch-mode enhancements
