# packages/server/src/controller/watch-mode.controller.ts
@@ -1,51 +1,57 @@
 import chokidar, { FSWatcher } from "chokidar";
 import { RequestHandler } from "express";
 import path from "path";
+import { components } from "../api";
 import { logger } from "../logger";
 import { ProjectStore } from "../service/project_store";
 
-type WatchModeHandler<Req = {}, Res = void> = RequestHandler<{}, Res, Req>;
+type StartWatchReq = components["schemas"]["StartWatchRequest"];
+type WatchStatusRes = components["schemas"]["WatchStatus"];
+type Handler<Req = {}, Res = void> = RequestHandler<{}, Res, Req>;
+
 export class WatchModeController {
    watchingPath: string | null;
+   watchingProjectName: string | null;
    watcher: FSWatcher;
 
    constructor(private projectStore: ProjectStore) {
       this.watchingPath = null;
+      this.watchingProjectName = null;
    }
 
-   public getWatchStatus: WatchModeHandler<
-      {},
-      { enabled: boolean; watchingPath: string | null }
-   > = async (_req, res) => {
-      return res
-         .json({
-            enabled: !!this.watchingPath,
-            watchingPath: this.watchingPath,
-         })
+   public getWatchStatus: Handler<{}, WatchStatusRes> = async (_req, res) => {
+      return res.json({
+         enabled: !!this.watchingPath,
+         watchingPath: this.watchingPath,
+         projectName: this.watchingProjectName ?? undefined,
+      });
    };
 
-   public startWatching: WatchModeHandler<{ projectName: string }> = async (
-      req,
-      res,
-   ) => {
+   public startWatching: Handler<StartWatchReq> = async (req, res) => {
       const projectManifest = await ProjectStore.reloadProjectManifest(
          this.projectStore.serverRootPath,
       );
+      this.watchingProjectName = req.body.projectName;
       this.watchingPath = path.join(
          this.projectStore.serverRootPath,
          projectManifest.projects[req.body.projectName],
       );
       this.watcher = chokidar.watch(this.watchingPath, {
          ignored: (path, stats) =>
-            !!stats?.isFile() && !path.endsWith(".malloy"),
+            !!stats?.isFile() &&
+            !path.endsWith(".malloy") &&
+            !path.endsWith(".md"),
          ignoreInitial: true,
       });
       const reloadProject = async () => {
-        // Overwrite the project with it's existing metadata to trigger a re-read
-         const project = await this.projectStore.getProject(req.body.projectName, true);
+         // Overwrite the project with it's existing metadata to trigger a re-read
+         const project = await this.projectStore.getProject(
+            req.body.projectName,
+            true,
+         );
          await this.projectStore.addProject(project.metadata);
-         logger.info(`Reloaded ${req.body.projectName}`)
-      }
+         logger.info(`Reloaded ${req.body.projectName}`);
+      };
 
       this.watcher.on("add", async (path) => {
          logger.info(
@@ -68,9 +74,10 @@ export class WatchModeController {
       res.json();
    };
 
-   public stopWatchMode: WatchModeHandler = async (_req, res) => {
+   public stopWatchMode: Handler = async (_req, res) => {
       this.watcher.close();
       this.watchingPath = null;
+      this.watchingProjectName = null;
       res.json();
    };
 }
